--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest"
+    "test": "jest",
+    "release": "release-it"
   },
   "dependencies": {
     "csstype": "^3.1.2",
@@ -98,6 +99,7 @@
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "release-it": "^17.0.0",
     "storybook": "^7.5.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
