--- a/.release-it.json
+++ b/.release-it.json
@@ -1,4 +1,8 @@
 {
+  "hooks": {
+    "before:init": ["npm run lint", "npm test"],
+    "after:bump": "npm run build"
+  },
   "github": {
     "release": true
   }
