--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-antd",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "type": "module",
   "description": "Styled Antd 是一个专门为 antd 组件库设计的 css-in-js 样式解决方案。",
   "repository": {
@@ -29,12 +29,19 @@
     "react",
     "style"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
